[homeconnectdirect] Migrated from Java 21 to Java 17